--- a/package.json
+++ b/package.json
@@ -7,24 +7,42 @@
     "test",
     "bdd",
     "knockout",
-    "bootstrap"
+    "bootstrap",
+    "benchmark"
   ],
   "author": "Adam Moon <itchcork@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/adamjmoon/jsFiddleTests.git"
-  }
+  },
   "engines": {
     "node": ">= 0.4.x"
   },
   "dependencies": {
-    "knockout": "*",
-    "growl": "1.7.x",
+      "knockout": "latest",
+      "requirejs": "latest",
+      "benchmark": "latest",
+      "async": ">= 0.1.22",
+      "bunyan": ">= 0.10.0",
+      "cli-color": ">= 0.1.6",
+      "optimist" : ">= 0.3.5",
+      "restify": ">= 1.4.4",
+      "settings": ">= 0.1.0",
+      "grunt-cli": "latest",
+      "grunt": "latest"
   },
   "devDependencies": {
-    "should": "*",
-    "mocha": "*",
-    "sinon": "*"
-    "coffee-script": "*"
+    "should": "latest",
+    "mocha": "latest",
+    "sinon": "latest",
+    "coffee-script": "latest",
+    "js2coffee": "latest",
+    "growl": "1.7.x",
+    "grunt-contrib-jshint": "",
+    "grunt-contrib-concat": "",
+    "grunt-yui-compressor": "latest",
+    "grunt-recess": "latest",
+    "grunt-parallel" : "latest",
+    "istanbul" : "latest"
   }
 }
